@@ -115,7 +115,6 @@ class TestResult(unittest.TestResult):
         self.failures.append((test, self._exc_info_to_string(err, test)))
         self._mirrorOutput = True
 
-    @failfast
     def addSubTest(self, test, subtest, err):
         """Called at the end of a subtest.
         'err' is None if the subtest ended successfully, otherwise it's a
@@ -124,6 +123,8 @@ class TestResult(unittest.TestResult):
         # By default, we don't do anything with successful subtests, but
         # more sophisticated test results might want to record them.
         if err is not None:
+            if getattr(self, 'failfast', False):
+                self.stop()
             if issubclass(err[0], test.failureException):
                 errors = self.failures
             else:
