@@ -1,3 +1,6 @@
+- Issue #22894: TestCase.subTest() would cause the test suite to be stopped
+  when in failfast mode, even in the absence of failures.
+
 - Issue #22457: Honour load_tests in the start_dir of discovery.
 
 - Issue #7559: unittest test loading ImportErrors are reported as import errors
